--- a/package.json
+++ b/package.json
@@ -10,11 +10,12 @@
     "unit": "jest test/unit/specs --coverage",
     "test": "npm run unit",
     "lint": "eslint --ext .js,.vue src test/unit/specs",
-    "build": "node build/buile.d.js"
+    "build": "node build/build.js"
   },
   "dependencies": {
     "firebase": "^4.8.2",
     "lodash": "^4.17.4",
+    "npm": "^5.6.0",
     "vue": "^2.5.3",
     "vue-router": "^3.0.1",
     "vuefire": "^1.4.5",
