--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "lodash": "^4.17.4",
     "npm": "^5.6.0",
     "vue": "^2.5.3",
+    "vue-loading-spinner": "^1.0.11",
     "vue-router": "^3.0.1",
     "vuefire": "^1.4.5",
     "vuetify": "^0.17.6",
