--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "npm": "^5.6.0",
     "vue": "^2.5.3",
     "vue-loading-spinner": "^1.0.11",
+    "vue-perfect-scrollbar": "^0.1.0",
     "vue-router": "^3.0.1",
     "vuefire": "^1.4.5",
     "vuetify": "^0.17.6",
